deploy/tryme-website/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: opengauss-tryme-website
  name: opengauss-tryme-website
