deploy/tryme-website/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengauss-tryme-website
  namespace: opengauss-tryme-website
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: opengauss-tryme-website
  template:
    metadata:
      labels:
        app: opengauss-tryme-website
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      containers:
      - name: websiteinfod
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss/opengauss-tryme-website:da34d150e0cc52470d80eee2e4a786fe8db1d423
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
