deploy/tryme-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengauss-tryme-website-service
  namespace: opengauss-tryme-website
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: opengauss-tryme-website
  type: ClusterIP

---
kind: Service
apiVersion: v1
metadata:
  name: opengauss-playground-backend-svc
  namespace: opengauss-tryme-website
spec:
  type: ExternalName
  externalName: moocstudio-opengauss-backend-service.moocstudio-opengauss-backend.svc.cluster.local
