deploy/tryme-website/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: opengauss-tryme-website-ingress
  namespace: opengauss-tryme-website
spec:
  tls:
    - hosts:
        - tryme.opengauss.org
      secretName: opengauss-tryme-website-tls
  rules:
    - host: tryme.opengauss.org
      http:
        paths:
          - backend:
              serviceName: opengauss-tryme-website-service
              servicePort: 80
            path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: opengauss-tryme-backend-ingress
  namespace: opengauss-tryme-website
spec:
  tls:
    - hosts:
        - tryme.opengauss.org
      secretName: opengauss-tryme-website-tls
  rules:
    - host: tryme.opengauss.org
      http:
        paths:
          - backend:
              serviceName: opengauss-playground-backend-svc
              servicePort: 80
            path: /api(/|$)(.*)

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: opengauss-tryme-website-osinfra-ingress
  namespace: opengauss-tryme-website
spec:
  tls:
    - hosts:
        - tryme-opengauss.osinfra.cn
      secretName: opengauss-tryme-website-osinfra-tls
  rules:
    - host: tryme-opengauss.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: opengauss-tryme-website-service
              servicePort: 80
            path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: opengauss-tryme-backend-osinfra-ingress
  namespace: opengauss-tryme-website
spec:
  tls:
    - hosts:
        - tryme-opengauss.osinfra.cn
      secretName: opengauss-tryme-website-osinfra-tls
  rules:
    - host: tryme-opengauss.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: opengauss-playground-backend-svc
              servicePort: 80
            path: /api(/|$)(.*)
